# C-temp

./: CMakeLists.txt  README.md  makefile  run.sh
header/: person.h
src/: main.cpp  person.cpp
